# komodo

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  CNAME  DoxyFile  Game1.cs  Komodo.csproj  Komodo.sln  LICENSE  Program.cs  README.md  Startup.cs
Behaviors/: MoveRightAndDownBehavior.cs
Common/: Common.csproj
Content/: Content.mgcb
Core/: IKomodoGame.cs  KomodoGame.cs  KomodoMonoGame.cs
DesktopGL/: DesktopGL.csproj  Startup.cs  app.manifest
KLang/: KLang.fsproj  Program.fs
Komodo/: CMakeLists.txt  Game.fs  Komodo.cpp  Komodo.csproj  Komodo.fsproj  Komodo.h  Logging.fs
Scales/: AST.fs  Interpreter.fs  Lexer.fs  Program.fs  Scale.fs  Scales.fsproj  Tokens.fs  test.sc  thing.fsx
Server/: Program.cs  Server.csproj  TCPServer.cs
cmake/: FindGLFW.cmake  Findglfw3.cmake  Findglm.cmake
docs/: CNAME  annotated.html  class_komodo_1_1_core_1_1_e_c_s_1_1_components_1_1_behavior_component-members.html  class_komodo_1_1_core_1_1_e_c_s_1_1_components_1_1_behavior_component.html  class_komodo_1_1_core_1_1_e_c_s_1_1_components_1_1_camera_component-members.html  class_komodo_1_1_core_1_1_e_c_s_1_1_components_1_1_camera_component.html  class_komodo_1_1_core_1_1_e_c_s_1_1_components_1_1_camera_component.js  class_komodo_1_1_core_1_1_e_c_s_1_1_components_1_1_component-members.html  class_komodo_1_1_core_1_1_e_c_s_1_1_components_1_1_component.html  class_komodo_1_1_core_1_1_e_c_s_1_1_components_1_1_component.js  class_komodo_1_1_core_1_1_e_c_s_1_1_components_1_1_drawable2_d_component-members.html  class_komodo_1_1_core_1_1_e_c_s_1_1_components_1_1_drawable2_d_component.html  class_komodo_1_1_core_1_1_e_c_s_1_1_components_1_1_drawable2_d_component.js  class_komodo_1_1_core_1_1_e_c_s_1_1_components_1_1_drawable3_d_component-members.html  class_komodo_1_1_core_1_1_e_c_s_1_1_components_1_1_drawable3_d_component.html  class_komodo_1_1_core_1_1_e_c_s_1_1_components_1_1_drawable3_d_component.js  class_komodo_1_1_core_1_1_e_c_s_1_1_components_1_1_dynamic_body_component-members.html  class_komodo_1_1_core_1_1_e_c_s_1_1_components_1_1_dynamic_body_component.html  class_komodo_1_1_core_1_1_e_c_s_1_1_components_1_1_dynamic_body_component.js  class_komodo_1_1_core_1_1_e_c_s_1_1_components_1_1_kinematic_body_component-members.html  class_komodo_1_1_core_1_1_e_c_s_1_1_components_1_1_kinematic_body_component.html  class_komodo_1_1_core_1_1_e_c_s_1_1_components_1_1_kinematic_body_component.js  class_komodo_1_1_core_1_1_e_c_s_1_1_components_1_1_physics_component-members.html  class_komodo_1_1_core_1_1_e_c_s_1_1_components_1_1_physics_component.html  class_komodo_1_1_core_1_1_e_c_s_1_1_components_1_1_physics_component.js  class_komodo_1_1_core_1_1_e_c_s_1_1_components_1_1_rigid_body_component-members.html  class_komodo_1_1_core_1_1_e_c_s_1_1_components_1_1_rigid_body_component.html  class_komodo_1_1_core_1_1_e_c_s_1_1_components_1_1_rigid_body_component.js  class_komodo_1_1_core_1_1_e_c_s_1_1_components_1_1_sound_component-members.html  class_komodo_1_1_core_1_1_e_c_s_1_1_components_1_1_sound_component.html  class_komodo_1_1_core_1_1_e_c_s_1_1_components_1_1_sound_component.js  class_komodo_1_1_core_1_1_e_c_s_1_1_components_1_1_sprite_component-members.html  class_komodo_1_1_core_1_1_e_c_s_1_1_components_1_1_sprite_component.html  class_komodo_1_1_core_1_1_e_c_s_1_1_components_1_1_static_body_component-members.html  class_komodo_1_1_core_1_1_e_c_s_1_1_components_1_1_static_body_component.html  class_komodo_1_1_core_1_1_e_c_s_1_1_components_1_1_static_body_component.js  class_komodo_1_1_core_1_1_e_c_s_1_1_components_1_1_text_component-members.html  class_komodo_1_1_core_1_1_e_c_s_1_1_components_1_1_text_component.html  class_komodo_1_1_core_1_1_e_c_s_1_1_components_1_1_text_component.js  class_komodo_1_1_core_1_1_e_c_s_1_1_components_1_1_trigger_body_component-members.html  (+189 more)
include/: Komodo.h  macros.h  stb_image.cpp  vector.h
src/: CMakeLists.txt  (+2 more)
(+493 files in other folders)
